# Crego-AI-ML-Task

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
data/: policy_docs.md  sample_store_keys.json
src/: main.py
src/api/: routes.py
src/core/: embeddings.py  jsonlogic_builder.py  mapper.py  model_client.py  rag.py  validator.py  vector_store.py
tests/: conftest.py  test_api.py  test_hiring_examples.py  test_jsonlogic.py  test_mapper.py
